# reality-resi-stack

./: .editorconfig  .gitattributes  .gitignore  .yamllint  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  llms.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  deployment_help.yml  feature_request.yml
.github/workflows/: lint.yml  redact.yml
docs/: README.md
docs/en/: CLIENTS.md  COMPARISON.md  DEPLOYMENT.md  DUAL-NODE.md  SUBSCRIPTION.md  TROUBLESHOOTING.md
docs/zh-CN/: CLIENTS.md  COMPARISON.md  DEPLOYMENT.md  DUAL-NODE.md  SUBSCRIPTION.md  TROUBLESHOOTING.md
examples/: README.md
examples/dual-node/: clash-profile.yaml  vless-links.txt
examples/single-node/: 03_route.json  05_dns.json  06_ntp.json  11_xtls-reality_inbounds.json  clash-profile.yaml  sing-box-client-outbound.json  vless-link.txt
install/: install.sh  uninstall.sh
install/lib/: backup.sh  common.sh  singbox.sh  subscription.sh  system.sh
scripts/: .redact-denylist.sha256  make-example.sh  redact.sh
subscription/: README.md  aggregator_server.py  leaf_server.py  pyproject.toml
templates/clash/: client-dual.yaml.tmpl  client-single.yaml.tmpl
templates/env/: subscription-aggregator.env.example  subscription-leaf.env.example
templates/singbox/: 00_log.json  11_xtls-reality_inbounds.json.tmpl
templates/singbox-client/: outbound.json.tmpl
templates/systemd/: config-backup.service  config-backup.timer  sing-box.service  subscription-aggregator.service  subscription-leaf.service
tests/: test_aggregator_cache.py  test_leaf_accounting.py
